# SimpleLabel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
damp/: .assistant_todo  1.deb  CMakeLists backup.txt  CMakeLists3.txt  icons.rar  simplelabel-1.0.0-Linux.deb  src.rar  test.txt  translations.rar  以后可能会考虑的功能.md  打印框.md  排版导出ui.md  排版导出功能需求描述.md  模板分类说明.md  模板需求描述.md
docs/: batch_print_architecture.md
icons/: appicon.rc  icons.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/commands/: undocommands.cpp  undocommands.h  undomanager.cpp  undomanager.h
src/core/: arrowelement.cpp  arrowelement.h  barcodeelement.cpp  barcodeelement.h  batchdatasource.cpp  batchdatasource.h  circleelement.cpp  circleelement.h  datasource.cpp  datasource.h  imageelement.cpp  imageelement.h  labelelement.cpp  labelelement.h  lineelement.cpp  lineelement.h  mysqldatasource.cpp  mysqldatasource.h  polygonelement.cpp  polygonelement.h  qrcodeelement.cpp  qrcodeelement.h  rectangleelement.cpp  rectangleelement.h  shapeelement.cpp  shapeelement.h  starelement.cpp  starelement.h  tabledatasource.cpp  tabledatasource.h  tableelement.cpp  tableelement.h  textelement.cpp  textelement.h
src/dialogs/: assetbrowserdialog.cpp  assetbrowserdialog.h  layoutexportdialog.cpp  layoutexportdialog.h  printcenterdialog.cpp  printcenterdialog.h  printcenterdialog.ui  templatecenterdialog.cpp  templatecenterdialog.h
src/graphics/: abstractshapeitem.cpp  abstractshapeitem.h  alignableitem.cpp  alignableitem.h  arrowitem.cpp  arrowitem.h  barcodeitem.cpp  barcodeitem.h  circleitem.cpp  circleitem.h  imageitem.cpp  imageitem.h  inlinetexteditor.cpp  inlinetexteditor.h  labelscene.cpp  labelscene.h  lineitem.cpp  lineitem.h  polygonitem.cpp  polygonitem.h  qrcodeitem.cpp  qrcodeitem.h  rectangleitem.cpp  rectangleitem.h  ruler.cpp  ruler.h  selectionframe.cpp  selectionframe.h  staritem.cpp  staritem.h  tableitem.cpp  tableitem.h  textitem.cpp  textitem.h
src/panels/: databaseprintwidget.cpp  databaseprintwidget.h  labelpropswidget.cpp  labelpropswidget.h
src/printing/: batchprintmanager.cpp  batchprintmanager.h  defaultprintrenderer.cpp  defaultprintrenderer.h  printcontext.h  printengine.cpp  printengine.h  printrenderer.h
tools/: _scan_strings.py  extract_tr.py  scan_missing_translations.py
translations/: SimpleLabel_en_US.qm  SimpleLabel_en_US.ts  SimpleLabel_zh_CN.ts  en_us_map.tsv  generate_en_us.py  source_strings.txt
